--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "next lint --fix"
+    "lint:fix": "eslint . --ext .ts,.tsx,.js,.json --fix"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -29,10 +29,13 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "lucide-react": "^0.316.0",
     "next": "14.0.4",
     "next-auth": "^4.24.6",
     "next-themes": "^0.2.1",
+    "prettier": "^3.2.5",
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
