--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dayjs": "^1.11.10",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "input-otp": "^1.2.4",
     "lucide-react": "^0.316.0",
     "next": "14.0.4",
     "next-auth": "^4.24.6",
