--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.3.1",
     "dayjs": "^1.11.10",
+    "dayjs-plugin-utc": "^0.1.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "input-otp": "^1.2.4",
