--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "next-auth": "^4.24.6",
     "next-themes": "^0.2.1",
     "prettier": "^3.2.5",
+    "prisma-dbml-generator": "^0.12.0",
+    "prisma-erd-generator": "^1.11.2",
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
