--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MYSQL_DATABASE=api
 MYSQL_USER=doesntmatterlocalonly
 MYSQL_PASSWORD=root
-DATABASE_URL=mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@127.0.0.1:3306/${MYSQL_DATABASE}
+DATABASE_URL=mysql://root:root@db:3306/api
 NEXTAUTH_SECRET=secret string here
