--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "eslint . --ext .ts,.tsx,.js,.json --fix"
+    "lint:fix": "eslint . --ext .ts,.tsx,.js,.json --fix",
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
