--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   db:
-    image: mysql:5.7
+    image: mysql:8
     container_name: db
     command: --default-authentication-plugin=mysql_native_password
     environment:
@@ -29,4 +29,4 @@ services:
       - .:/app
       - /app/node_modules
       - /app/.next
-    entrypoint: ["/bin/sh", "-c", "npx prisma db push && npm start"]
+    entrypoint: ["/bin/sh", "-c", "npx prisma db push --accept-data-loss && npm start"]
