--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "socket.io-client": "^4.7.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
