--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,4 +29,4 @@ services:
       - .:/app
       - /app/node_modules
       - /app/.next
-    entrypoint: ["/bin/sh", "-c", "npx prisma db push --accept-data-loss && npm start"]
+    entrypoint: ["/bin/sh", "-c", "npx prisma db push --accept-data-loss && npm run seed && npm start"]
