--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "eslint . --ext .ts,.tsx,.js,.json --fix",
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "./node_modules/.bin/ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
