--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 MYSQL_DATABASE=api
 MYSQL_USER=doesntmatterlocalonly
 MYSQL_PASSWORD=root
-DATABASE_URL=mysql://root:root@db:3306/api
+# DATABASE_URL=mysql://root:newrootpassword@127.0.0.1:3306/api
+DATABASE_URL="mysql://root:root@db:3306/api"
 NEXTAUTH_SECRET=secret string here
+# NEXT_PUBLIC_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_BASE_URL=http://193.219.91.103:2425
